# etherforge

./: CMakeLists.txt  README.md  build.sh  etherforged_overview.txt
config/: etherforge.yaml
etherforge_test/config/: etherforged.yaml
etherforge_test/include/: ethercat.h  protocol.h
etherforge_test/src/: config.c  daemon.c  ethercat.c  main.c  protocol.c
include/: config.h  daemon.h  ethercat.h  logging.h  protocol.h  service.h
src/: commands.c  config.c  daemon.c  ethercat.c  ethercat_soem.c  logging.c  main.c  network.c  protocol.c  service.c
